Remove inefficient Number constructor
Reported by FindBugs, using static valueOf instead